added user auth module and routes

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,14 @@
-<div>
-  <app-side-nav></app-side-nav>
-  <app-header></app-header>
-  <app-main>
-    <router-outlet></router-outlet>
-  </app-main>
-  <app-footer></app-footer>
-</div>
+<mat-sidenav-container>
+
+  <mat-sidenav #sidenav>
+    <app-side-nav (closeSideNav)="sidenav.close()"></app-side-nav>
+  </mat-sidenav>
+
+  <mat-sidenav-content>
+    <app-header (SideNavToggle)="sidenav.toggle()"></app-header>
+    <main class="main-section">
+      <router-outlet></router-outlet>
+    </main>
+    
+  </mat-sidenav-content>
+</mat-sidenav-container>
