--- a/src/app/modules/shared/header/header.component.html
+++ b/src/app/modules/shared/header/header.component.html
@@ -1,1 +1,10 @@
-<p>header works!</p>
+<mat-toolbar color="primary">
+    <div class="menu-container">
+        <button mat-icon-button (click)="openSidenav()" class="menu-button">
+            <mat-icon class="menu-icon">menu</mat-icon>
+        </button>
+    </div>
+
+
+    <div class="logo">Story Corner</div>
+</mat-toolbar>
