--- a/src/app/modules/shared/side-nav/side-nav.component.html
+++ b/src/app/modules/shared/side-nav/side-nav.component.html
@@ -1,1 +1,14 @@
-<p>side-nav works!</p>
+<mat-nav-list class="sidenav-list">
+    <a mat-list-item (click)="onToggleClose('authentication/login')">
+        <mat-icon>input</mat-icon>
+        <span>Signin</span>
+    </a>
+    <a mat-list-item (click)="onToggleClose('/authentication/registration')">
+        <mat-icon>account_circle</mat-icon>
+        <span>Signup</span>
+    </a>
+    <a mat-list-item (click)="onToggleClose('/authentication/forgot-password')">
+        <mat-icon>help_outline</mat-icon>
+        <span>Forgot password</span>
+    </a>
+</mat-nav-list>
