--- a/src/app/modules/shared/side-nav/side-nav.component.html
+++ b/src/app/modules/shared/side-nav/side-nav.component.html
@@ -1,11 +1,11 @@
 <mat-nav-list class="sidenav-list">
-    <a mat-list-item (click)="onToggleClose('authentication/login')">
+    <a mat-list-item (click)="onToggleClose('/authentication/login')">
         <mat-icon>input</mat-icon>
-        <span>Signin</span>
+        <span>Login</span>
     </a>
     <a mat-list-item (click)="onToggleClose('/authentication/registration')">
         <mat-icon>account_circle</mat-icon>
-        <span>Signup</span>
+        <span>Registration</span>
     </a>
     <a mat-list-item (click)="onToggleClose('/authentication/forgot-password')">
         <mat-icon>help_outline</mat-icon>
