--- a/src/app/modules/user-authentication/login/login.component.scss
+++ b/src/app/modules/user-authentication/login/login.component.scss
@@ -1,19 +1,41 @@
-.card{
-    padding: 20px;    
+.card {
+    padding: 20px;
     background: #3f51b52b;
-    .card-header{
+    height: 150px;
+    width: 500px;
+    position: relative;
+
+    .card-header {
         font-size: 16px;
         font-weight: 600;
         color: #3f51b5;
     }
-    .card-body{
-        input{
+
+    .card-body {
+        input {
             margin-bottom: 10px;
             border-radius: 2px;
             border: 1px solid black;
         }
-        label{
+
+        label {
             margin-right: 5px;
         }
+    }
+
+    .error {
+        color: red;
+        margin-top: 10px;
+    }
+
+    .login-btn {
+        margin: 10px 0px;
+        padding: 10px 30px;
+        background: #3f51b5;
+        border: none;
+        color: #fff;
+        position: absolute;
+        right: 10px;
+        bottom: 0;
     }
 }
