chnages for login and logout

--- a/src/app/modules/authorized-user/home/home.component.html
+++ b/src/app/modules/authorized-user/home/home.component.html
@@ -1,1 +1,5 @@
-<p>home works!</p>
+<div class="main-wrapper">
+    <div class="title">My Stories</div>
+    <div class="story-single" ></div>
+</div>
+hjghjgjgjh
