--- a/src/app/modules/shared/side-nav/side-nav.component.html
+++ b/src/app/modules/shared/side-nav/side-nav.component.html
@@ -11,4 +11,8 @@
         <mat-icon>help_outline</mat-icon>
         <span>Forgot password</span>
     </a>
+    <a mat-list-item (click)="logout()">
+        <mat-icon>help_outline</mat-icon>
+        <span>Logout</span>
+    </a>
 </mat-nav-list>
