--- a/src/app/modules/shared/side-nav/side-nav.component.html
+++ b/src/app/modules/shared/side-nav/side-nav.component.html
@@ -1,18 +1,22 @@
 <mat-nav-list class="sidenav-list">
-    <a mat-list-item (click)="onToggleClose('/authentication/login')">
-        <mat-icon>input</mat-icon>
-        <span>Login</span>
-    </a>
-    <a mat-list-item (click)="onToggleClose('/authentication/registration')">
-        <mat-icon>account_circle</mat-icon>
-        <span>Registration</span>
-    </a>
-    <a mat-list-item (click)="onToggleClose('/authentication/forgot-password')">
-        <mat-icon>help_outline</mat-icon>
-        <span>Forgot password</span>
-    </a>
-    <a mat-list-item (click)="logout()">
-        <mat-icon>help_outline</mat-icon>
-        <span>Logout</span>
-    </a>
+    <ng-container *ngIf="!currentUser">
+        <a mat-list-item (click)="onToggleClose('/authentication/login')">
+            <mat-icon>input</mat-icon>
+            <span>Login</span>
+        </a>
+        <a mat-list-item (click)="onToggleClose('/authentication/registration')">
+            <mat-icon>account_circle</mat-icon>
+            <span>Registration</span>
+        </a>
+        <a mat-list-item (click)="onToggleClose('/authentication/forgot-password')">
+            <mat-icon>help_outline</mat-icon>
+            <span>Forgot password</span>
+        </a>
+    </ng-container>
+    <ng-container *ngIf="currentUser">
+        <a mat-list-item (click)="logout()">
+            <mat-icon>logout</mat-icon>
+            <span>Logout</span>
+        </a>
+    </ng-container>
 </mat-nav-list>
