--- a/src/app/modules/user-authentication/login/login.component.html
+++ b/src/app/modules/user-authentication/login/login.component.html
@@ -1,7 +1,7 @@
 <div class="card">
     <h4 class="card-header">Login</h4>
     <div class="card-body">
-        <form [formGroup]="loginForm" (ngSubmit)="onSubmit()">
+        <form [formGroup]="loginForm" (ngSubmit)="login()">
             <div class="form-group">
                 <label for="username">Username:</label>
                 <input type="text" formControlName="username" class="form-control"
